--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.2.0",
+    "autoprefixer": "^10.4.4",
+    "postcss": "^8.4.12",
+    "postcss-import": "^14.0.2",
+    "sass": "^1.49.9",
+    "tailwindcss": "^3.0.23",
     "vite": "^2.8.0"
   }
 }
