--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vee-validate/rules": "^4.5.10",
+    "vee-validate": "^4.5.10",
     "vue": "^3.2.25",
     "vuex": "^4.0.2"
   },
