--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@vee-validate/rules": "^4.5.10",
+    "firebase": "^8.10.0",
     "vee-validate": "^4.5.10",
     "vue": "^3.2.25",
     "vuex": "^4.0.2"
