--- a/package.json
+++ b/package.json
@@ -1,26 +1,16 @@
 {
-  "name": "annoying-site",
+  "name": "annoying-website",
   "private": true,
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
-  "dependencies": {
-    "@vee-validate/rules": "^4.5.10",
-    "firebase": "^8.10.0",
-    "vee-validate": "^4.5.10",
-    "vue": "^3.2.25",
-    "vuex": "^4.0.2"
-  },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^2.2.0",
-    "autoprefixer": "^10.4.4",
-    "postcss": "^8.4.12",
-    "postcss-import": "^14.0.2",
-    "sass": "^1.49.9",
-    "tailwindcss": "^3.0.23",
+    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.30",
+    "svelte": "^3.44.0",
     "vite": "^2.8.0"
   }
 }
