--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.30",
+    "autoprefixer": "^10.4.4",
+    "postcss": "^8.4.12",
     "svelte": "^3.44.0",
+    "tailwindcss": "^3.0.23",
     "vite": "^2.8.0"
   }
 }
