--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.30",
     "autoprefixer": "^10.4.4",
     "postcss": "^8.4.12",
+    "sass": "^1.49.9",
     "svelte": "^3.44.0",
     "tailwindcss": "^3.0.23",
     "vite": "^2.8.0"
