--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "svelte": "^3.44.0",
     "tailwindcss": "^3.0.23",
     "vite": "^2.8.0"
+  },
+  "dependencies": {
+    "svelte-forms-lib": "^2.0.1",
+    "yup": "^0.32.11"
   }
 }
