convert RegistrationForm, add felte and yup

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "vite": "^2.8.0"
   },
   "dependencies": {
-    "svelte-forms-lib": "^2.0.1",
+    "@felte/validator-yup": "^1.0.3",
+    "felte": "^1.1.4",
     "yup": "^0.32.11"
   }
 }
