add MODE option for .env, convert Help, add firebase User model, fix TermsModal

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@felte/validator-yup": "^1.0.3",
     "felte": "^1.1.4",
+    "firebase": "^8.10.1",
     "yup": "^0.32.11"
   }
 }
